First pass at resume

--- a/index.html
+++ b/index.html
@@ -1,2 +1,74 @@
-<h1>Up and running...</h1>
-<i>...and ready to rock!</i>
+<h1>Jon Howell</h1>
+<i>Engineer and online operator extraordinaire.</i>
+
+Qualifications ----------------- 
+Red Hat Certified Engineer #160-032-157
+Red Hat Certified Specialist in Ansible Automation
+
+Familiar Tech ------------------
+• Containerization: Docker, Google Kubernetes Engine
+• Infrastructure as code: Git, Ansible, Kickstart, Puppet
+• Linux network services (DNS, DHCP, iSCSI, NFS, NTP, PXE)
+• Load balancers: A10, F5, HAProxy
+• Log aggregation: Elasticsearch, Filebeat, Kibana
+• Monitoring: Grafana, Prometheus, Cacti, Zabbix
+• Scripting: Bash, Python, Regex
+• Virtualization: Vsphere ESX, VirtualBox, KVM, Vagrant
+
+Experience ---------------------
+<b>Development Operations Engineer (Infrastructure)</b>
+Perfect World Entertainment, Redwood City, CA
+<i>April 2019 – present</i>
+Work on a small team responsible for all of the Linux based servers in the
+company; including online game infrastructure, Arc client, online forums,
+internal tools, and server monitoring. Manage DNS, the CDN, and load
+balancers. Coordinate with game studios and internal departments to
+support projects with new technologies and hardware. Maintain legacy
+applications in a sparsely documented production environment. Triage,
+troubleshoot, and resolve issues across the full stack and document what we
+learn.
+Migrate old services away from ancient VM clusters, SANs, network
+hardware and migrate configuration management to newer Puppet code.
+
+<b>Senior Linux Systems Engineer (Game Operations)</b>
+Perfect World Entertainment, Redwood City, CA
+<i>July 2017 – April 2019</i>
+Operate online game infrastructure and build out environments for potential
+new titles. Configure monitoring and log aggregation software with custom
+metrics and alerts.
+Remotely absorbed the operations work of the studio Motiga as they were
+downsized and eventually closed. Solely responsible for supporting the live
+environment of Gigantic for most of its last year. Retired Gigantic gracefully
+on 2018_07_31, letting fans finish their last game.
+Closed Runic studios and became responsible for the online multiplayer
+portion of Torchlight 2. Created the process to securely archive game source
+code and assets from Git, Subversion, and Perforce and release it to 3rd
+parties (EG: Port games to other consoles).
+Created procedure to automate repurposing Dell and Huawei servers for
+new games with Ansible, PXE, and Kickstart. Created Python bot in Slack to
+perform administrative tasks like updating game server builds, locking
+servers, and gathering some quick information. Automated server crash
+reporting and core dump uploads for game developers.
+One game’s platform was a cloud native Kubernetes application in which I
+ripped the game server portion out of the cluster and ran it on on-prem
+hardware. The services that remained on the cluster were moved to preemptible
+cloud instances, reducing costs by over 66%.
+
+<b>Systems Engineer (Game Operations)</b>
+Perfect World Entertainment, Redwood City, CA
+<i>July 2016 – June 2017</i>
+Hired to deploy and support the then upcoming title Gigantic by the Seattle
+based studio Motiga. The backend of Gigantic was a mix of Windows and
+Linux servers running a microservice architecture across bare metal,
+virtualized, and cloud hardware. Made a custom VM image of a game server
+on Google Cloud so we could quickly scale into the cloud if necessary. After
+population was lower than anticipated, I shrank the footprint of the game
+from ~150 servers to 15.
+Migrated and updated some custom internal services used by Cryptic
+studios including CMS used by Customer Service, application monitoring,
+and infrastructure to send in-game broadcasts.
+
+Education ----------------------
+A.S. Natural Science, Honors, 2013
+A.A Mathematics, Honors, 2013
+Laney College, Oakland, CA
