Added more line breaks and achievements.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<h1>Jon Howell</h1>
+<center>
+<h4>Jon Howell</h4>
 <br>
 <i>Engineer and online operator extraordinaire.</i>
 <br>
@@ -26,6 +27,16 @@ Familiar Tech ------------------
 <br>
 • Virtualization: Vsphere ESX, VirtualBox, KVM, Vagrant
 <br>
+Notable Accomplishments -------
+<br>
+<p>Created an automated process to reimage and provision servers between projects.
+<br>
+Moved stateful servers from a cloud-native Kubernetes application and deployed them to datacenter hardware. The datacenter hardware cost approximately 25% of the cloud hardware. Separately, the services left on the cloud were moved to pre-emptible instances resulting in a 70% reduction in cloud compute costs.
+<br>
+Created Python bot in chat to perform game server administrative tasks (EG: return metrics, lock servers, update builds).
+<br>
+Set up a variety of custom alerts, monitoring dashboards and log aggregation
+<br>
 Experience ---------------------
 <br>
 <b>Development Operations Engineer (Infrastructure)</b>
@@ -45,14 +56,16 @@ learn.
 <br>
 Migrate old services away from ancient VM clusters, SANs, network
 hardware and migrate configuration management to newer Puppet code.
-<p>
+</p>
 
 <b>Senior Linux Systems Engineer (Game Operations)</b>
 Perfect World Entertainment, Redwood City, CA
 <i>July 2017 – April 2019</i>
+<p>
 Operate online game infrastructure and build out environments for potential
 new titles. Configure monitoring and log aggregation software with custom
 metrics and alerts.
+<br>
 Remotely absorbed the operations work of the studio Motiga as they were
 downsized and eventually closed. Solely responsible for supporting the live
 environment of Gigantic for most of its last year. Retired Gigantic gracefully
@@ -61,19 +74,22 @@ Closed Runic studios and became responsible for the online multiplayer
 portion of Torchlight 2. Created the process to securely archive game source
 code and assets from Git, Subversion, and Perforce and release it to 3rd
 parties (EG: Port games to other consoles).
+<br>
 Created procedure to automate repurposing Dell and Huawei servers for
 new games with Ansible, PXE, and Kickstart. Created Python bot in Slack to
 perform administrative tasks like updating game server builds, locking
 servers, and gathering some quick information. Automated server crash
 reporting and core dump uploads for game developers.
+<br>
 One game’s platform was a cloud native Kubernetes application in which I
 ripped the game server portion out of the cluster and ran it on on-prem
 hardware. The services that remained on the cluster were moved to preemptible
 cloud instances, reducing costs by over 66%.
-
+</p>
 <b>Systems Engineer (Game Operations)</b>
 Perfect World Entertainment, Redwood City, CA
 <i>July 2016 – June 2017</i>
+<p>
 Hired to deploy and support the then upcoming title Gigantic by the Seattle
 based studio Motiga. The backend of Gigantic was a mix of Windows and
 Linux servers running a microservice architecture across bare metal,
@@ -81,11 +97,16 @@ virtualized, and cloud hardware. Made a custom VM image of a game server
 on Google Cloud so we could quickly scale into the cloud if necessary. After
 population was lower than anticipated, I shrank the footprint of the game
 from ~150 servers to 15.
+<br>
 Migrated and updated some custom internal services used by Cryptic
 studios including CMS used by Customer Service, application monitoring,
 and infrastructure to send in-game broadcasts.
-
+</p>
+<br>
 Education ----------------------
+<br>
 A.S. Natural Science, Honors, 2013
+<br>
 A.A Mathematics, Honors, 2013
+<br>
 Laney College, Oakland, CA
