Make section headers h3

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <br>
 <i>Engineer and online operator extraordinaire.</i>
 <br>
-Qualifications ----------------- 
+<h3>Qualifications -----------------</h3>
 <br>
 Red Hat Certified Engineer #160-032-157
 <br>
 Red Hat Certified Specialist in Ansible Automation
 <br>
-Familiar Tech ------------------
+<h3>Familiar Tech ------------------</h3>
 <br>
 • Containerization: Docker, Google Kubernetes Engine
 <br>
@@ -27,7 +27,7 @@ Familiar Tech ------------------
 <br>
 • Virtualization: Vsphere ESX, VirtualBox, KVM, Vagrant
 <br>
-Notable Accomplishments -------
+<h3>Notable Accomplishments -------</h3>
 <br>
 <p>Created an automated process to reimage and provision servers between projects.
 <br>
@@ -37,7 +37,7 @@ Created Python bot in chat to perform game server administrative tasks (EG: retu
 <br>
 Set up a variety of custom alerts, monitoring dashboards and log aggregation
 <br>
-Experience ---------------------
+<h3>Experience ---------------------</h3>
 <br>
 <b>Development Operations Engineer (Infrastructure)</b>
 <br>
@@ -103,7 +103,7 @@ studios including CMS used by Customer Service, application monitoring,
 and infrastructure to send in-game broadcasts.
 </p>
 <br>
-Education ----------------------
+<h3>Education ----------------------</h3>
 <br>
 A.S. Natural Science, Honors, 2013
 <br>
