--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<h2>Jon Howell</h2>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="rabbitdewstyle.css">
+</head>
+<body>
+<h1>Jon Howell</h1>
 <i>Engineer and online operator extraordinaire.</i>
 <h3>Qualifications -----------------</h3>
 Red Hat Certified Engineer #160-032-157
@@ -52,7 +58,9 @@ hardware and migrate configuration management to newer Puppet code.
 </p>
 
 <b>Senior Linux Systems Engineer (Game Operations)</b>
+<br>
 Perfect World Entertainment, Redwood City, CA
+<br>
 <i>July 2017 – April 2019</i>
 <p>
 Operate online game infrastructure and build out environments for potential
@@ -80,7 +88,9 @@ hardware. The services that remained on the cluster were moved to preemptible
 cloud instances, reducing costs by over 66%.
 </p>
 <b>Systems Engineer (Game Operations)</b>
+<br>
 Perfect World Entertainment, Redwood City, CA
+<br>
 <i>July 2016 – June 2017</i>
 <p>
 Hired to deploy and support the then upcoming title Gigantic by the Seattle
@@ -102,3 +112,4 @@ A.S. Natural Science, Honors, 2013
 A.A Mathematics, Honors, 2013
 <br>
 Laney College, Oakland, CA
+</body>
