--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 <h1>Jon Howell</h1>
 <i>Engineer and online operator extraordinaire.</i>
 <h3>Qualifications -----------------</h3>
+<p>
 Red Hat Certified Engineer #160-032-157
 <br>
 Red Hat Certified Specialist in Ansible Automation
-<br>
+</p>
 <h3>Familiar Tech ------------------</h3>
+<p>
 • Containerization: Docker, Google Kubernetes Engine
 <br>
 • Infrastructure as code: Git, Ansible, Kickstart, Puppet
@@ -28,14 +30,15 @@ Red Hat Certified Specialist in Ansible Automation
 <br>
 • Virtualization: Vsphere ESX, VirtualBox, KVM, Vagrant
 <br>
+</p>
 <h3>Notable Accomplishments -------</h3>
-<p>Created an automated process to reimage and provision servers between projects.
+<p>• Created an automated process to reimage and provision servers between projects.
 <br>
-Moved stateful servers from a cloud-native Kubernetes application and deployed them to datacenter hardware. The datacenter hardware cost approximately 25% of the cloud hardware. Separately, the services left on the cloud were moved to pre-emptible instances resulting in a 70% reduction in cloud compute costs.
+• Moved stateful servers from a cloud-native Kubernetes application and deployed them to datacenter hardware. The datacenter hardware cost approximately 25% of the cloud hardware. Separately, the services left on the cloud were moved to pre-emptible instances resulting in a 70% reduction in cloud compute costs.
 <br>
-Created Python bot in chat to perform game server administrative tasks (EG: return metrics, lock servers, update builds).
+• Created Python bot in chat to perform game server administrative tasks (EG: return metrics, lock servers, update builds).
 <br>
-Set up a variety of custom alerts, monitoring dashboards and log aggregation
+• Set up a variety of custom alerts, monitoring dashboards and log aggregation
 <br>
 <h3>Experience ---------------------</h3>
 <b>Development Operations Engineer (Infrastructure)</b>
@@ -107,9 +110,11 @@ and infrastructure to send in-game broadcasts.
 </p>
 <br>
 <h3>Education ----------------------</h3>
+<p>
 A.S. Natural Science, Honors, 2013
 <br>
 A.A Mathematics, Honors, 2013
 <br>
 Laney College, Oakland, CA
+</p>
 </body>
