--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 </head>
 <body>
 <h1>Jon Howell</h1>
+<p>
 <i>Engineer and online operator extraordinaire.</i>
-<h3>Qualifications -----------------</h3>
+</p>
+<h3>---Qualifications -----------------</h3>
 <p>
 Red Hat Certified Engineer #160-032-157
 <br>
 Red Hat Certified Specialist in Ansible Automation
 </p>
-<h3>Familiar Tech ------------------</h3>
+<h3>---Familiar Tech ------------------</h3>
 <p>
 • Containerization: Docker, Google Kubernetes Engine
 <br>
@@ -31,7 +33,7 @@ Red Hat Certified Specialist in Ansible Automation
 • Virtualization: Vsphere ESX, VirtualBox, KVM, Vagrant
 <br>
 </p>
-<h3>Notable Accomplishments -------</h3>
+<h3>---Notable Accomplishments -------</h3>
 <p>• Created an automated process to reimage and provision servers between projects.
 <br>
 • Moved stateful servers from a cloud-native Kubernetes application and deployed them to datacenter hardware. The datacenter hardware cost approximately 25% of the cloud hardware. Separately, the services left on the cloud were moved to pre-emptible instances resulting in a 70% reduction in cloud compute costs.
@@ -40,7 +42,7 @@ Red Hat Certified Specialist in Ansible Automation
 <br>
 • Set up a variety of custom alerts, monitoring dashboards and log aggregation
 <br>
-<h3>Experience ---------------------</h3>
+<h3>---Experience ---------------------</h3>
 <b>Development Operations Engineer (Infrastructure)</b>
 <br>
 Perfect World Entertainment, Redwood City, CA
@@ -109,7 +111,7 @@ studios including CMS used by Customer Service, application monitoring,
 and infrastructure to send in-game broadcasts.
 </p>
 <br>
-<h3>Education ----------------------</h3>
+<h3>---Education ----------------------</h3>
 <p>
 A.S. Natural Science, Honors, 2013
 <br>
