Added name banner

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <link rel="stylesheet" type="text/css" href="rabbitdewstyle.css">
 </head>
 <body>
+<pre>
+       █████                        █████   █████                                   ████  ████
+      ░░███                        ░░███   ░░███                                   ░░███ ░░███
+       ░███   ██████  ████████      ░███    ░███   ██████  █████ ███ █████  ██████  ░███  ░███
+       ░███  ███░░███░░███░░███     ░███████████  ███░░███░░███ ░███░░███  ███░░███ ░███  ░███
+       ░███ ░███ ░███ ░███ ░███     ░███░░░░░███ ░███ ░███ ░███ ░███ ░███ ░███████  ░███  ░███
+ ███   ░███ ░███ ░███ ░███ ░███     ░███    ░███ ░███ ░███ ░░███████████  ░███░░░   ░███  ░███
+░░████████  ░░██████  ████ █████    █████   █████░░██████   ░░████░████   ░░██████  █████ █████
+ ░░░░░░░░    ░░░░░░  ░░░░ ░░░░░    ░░░░░   ░░░░░  ░░░░░░     ░░░░ ░░░░     ░░░░░░  ░░░░░ ░░░░░
+
+</pre>
 <h1>Jon Howell</h1>
 <p>
 <i>Engineer and online operator extraordinaire.</i>
