--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
  ░░░░░░░░    ░░░░░░  ░░░░ ░░░░░    ░░░░░   ░░░░░  ░░░░░░     ░░░░ ░░░░     ░░░░░░  ░░░░░ ░░░░░
 
 </pre>
-<h1>Jon Howell</h1>
 <p>
-<i>Engineer and online operator extraordinaire.</i>
+<h3>Engineer and online operator extraordinaire.</h3>
 </p>
 <h3>---Qualifications -----------------</h3>
 <p>
@@ -54,11 +53,13 @@ Red Hat Certified Specialist in Ansible Automation
 • Set up a variety of custom alerts, monitoring dashboards and log aggregation
 <br>
 <h3>---Experience ---------------------</h3>
+<div class="job_title">
 <b>Development Operations Engineer (Infrastructure)</b>
 <br>
 Perfect World Entertainment, Redwood City, CA
 <br>
 <i>April 2019 – present</i>
+</div>
 <p>
 Work on a small team responsible for all of the Linux based servers in the
 company; including online game infrastructure, Arc client, online forums,
@@ -72,12 +73,13 @@ learn.
 Migrate old services away from ancient VM clusters, SANs, network
 hardware and migrate configuration management to newer Puppet code.
 </p>
-
+<div class="job_title">
 <b>Senior Linux Systems Engineer (Game Operations)</b>
 <br>
 Perfect World Entertainment, Redwood City, CA
 <br>
 <i>July 2017 – April 2019</i>
+</div>
 <p>
 Operate online game infrastructure and build out environments for potential
 new titles. Configure monitoring and log aggregation software with custom
@@ -103,11 +105,13 @@ ripped the game server portion out of the cluster and ran it on on-prem
 hardware. The services that remained on the cluster were moved to preemptible
 cloud instances, reducing costs by over 66%.
 </p>
+<div class="job_title">
 <b>Systems Engineer (Game Operations)</b>
 <br>
 Perfect World Entertainment, Redwood City, CA
 <br>
 <i>July 2016 – June 2017</i>
+</div>
 <p>
 Hired to deploy and support the then upcoming title Gigantic by the Seattle
 based studio Motiga. The backend of Gigantic was a mix of Windows and
