--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </pre>
 <p>
-<h3>Engineer and online operator extraordinaire.</h3>
+<h3><i>Engineer and online operator extraordinaire.</i></h3>
 </p>
 <h3>---Qualifications -----------------</h3>
 <p>
@@ -69,7 +69,8 @@ support projects with new technologies and hardware. Maintain legacy
 applications in a sparsely documented production environment. Triage,
 troubleshoot, and resolve issues across the full stack and document what we
 learn.
-<br>
+</p>
+<p>
 Migrate old services away from ancient VM clusters, SANs, network
 hardware and migrate configuration management to newer Puppet code.
 </p>
@@ -84,7 +85,8 @@ Perfect World Entertainment, Redwood City, CA
 Operate online game infrastructure and build out environments for potential
 new titles. Configure monitoring and log aggregation software with custom
 metrics and alerts.
-<br>
+</p>
+<p>
 Remotely absorbed the operations work of the studio Motiga as they were
 downsized and eventually closed. Solely responsible for supporting the live
 environment of Gigantic for most of its last year. Retired Gigantic gracefully
@@ -93,13 +95,15 @@ Closed Runic studios and became responsible for the online multiplayer
 portion of Torchlight 2. Created the process to securely archive game source
 code and assets from Git, Subversion, and Perforce and release it to 3rd
 parties (EG: Port games to other consoles).
-<br>
+</p>
+<p>
 Created procedure to automate repurposing Dell and Huawei servers for
 new games with Ansible, PXE, and Kickstart. Created Python bot in Slack to
 perform administrative tasks like updating game server builds, locking
 servers, and gathering some quick information. Automated server crash
 reporting and core dump uploads for game developers.
-<br>
+<p>
+</p>
 One game’s platform was a cloud native Kubernetes application in which I
 ripped the game server portion out of the cluster and ran it on on-prem
 hardware. The services that remained on the cluster were moved to preemptible
