--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
  ░░░░░░░░    ░░░░░░  ░░░░ ░░░░░    ░░░░░   ░░░░░  ░░░░░░     ░░░░ ░░░░     ░░░░░░  ░░░░░ ░░░░░
 
 </pre>
+<img src='images/jon_headshot.jpg'></img>
 <p>
 <h3><i>Engineer and online operator extraordinaire.</i></h3>
 </p>
@@ -103,11 +104,6 @@ perform administrative tasks like updating game server builds, locking
 servers, and gathering some quick information. Automated server crash
 reporting and core dump uploads for game developers.
 <p>
-</p>
-One game’s platform was a cloud native Kubernetes application in which I
-ripped the game server portion out of the cluster and ran it on on-prem
-hardware. The services that remained on the cluster were moved to preemptible
-cloud instances, reducing costs by over 66%.
 </p>
 <div class="job_title">
 <b>Systems Engineer (Game Operations)</b>
