More italics and circled imagewq

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="rabbitdewstyle.css">
 </head>
 <body>
+<img src='images/jon_headshot.jpg'></img>
 <pre>
        █████                        █████   █████                                   ████  ████
       ░░███                        ░░███   ░░███                                   ░░███ ░░███
@@ -15,7 +16,6 @@
  ░░░░░░░░    ░░░░░░  ░░░░ ░░░░░    ░░░░░   ░░░░░  ░░░░░░     ░░░░ ░░░░     ░░░░░░  ░░░░░ ░░░░░
 
 </pre>
-<img src='images/jon_headshot.jpg'></img>
 <p>
 <h3><i>Engineer and online operator extraordinaire.</i></h3>
 </p>
@@ -56,10 +56,11 @@ Red Hat Certified Specialist in Ansible Automation
 <h3>---Experience ---------------------</h3>
 <div class="job_title">
 <b>Development Operations Engineer (Infrastructure)</b>
-<br>
+<i>
 Perfect World Entertainment, Redwood City, CA
 <br>
-<i>April 2019 – present</i>
+April 2019 – present
+</i>
 </div>
 <p>
 Work on a small team responsible for all of the Linux based servers in the
@@ -77,10 +78,11 @@ hardware and migrate configuration management to newer Puppet code.
 </p>
 <div class="job_title">
 <b>Senior Linux Systems Engineer (Game Operations)</b>
-<br>
+<i>
 Perfect World Entertainment, Redwood City, CA
 <br>
-<i>July 2017 – April 2019</i>
+July 2017 – April 2019
+</i>
 </div>
 <p>
 Operate online game infrastructure and build out environments for potential
@@ -107,10 +109,11 @@ reporting and core dump uploads for game developers.
 </p>
 <div class="job_title">
 <b>Systems Engineer (Game Operations)</b>
-<br>
+<i>
 Perfect World Entertainment, Redwood City, CA
 <br>
-<i>July 2016 – June 2017</i>
+July 2016 – June 2017
+</i>
 </div>
 <p>
 Hired to deploy and support the then upcoming title Gigantic by the Seattle
