--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="rabbitdewstyle.css">
 </head>
 <body>
+<div id='banner'>
 <img src='images/jon_headshot.jpg'></img>
 <pre>
        █████                        █████   █████                                   ████  ████
@@ -19,6 +20,7 @@
 <p>
 <h3><i>Engineer and online operator extraordinaire.</i></h3>
 </p>
+</div>
 <h3>---Qualifications -----------------</h3>
 <p>
 Red Hat Certified Engineer #160-032-157
