slightly changed title

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </pre>
 <p>
-<h3><i>Engineer and online operator extraordinaire.</i></h3>
+<h3><i>DevOps engineer and online operator extraordinaire.</i></h3>
 </p>
 </div>
 <h3>---Qualifications -----------------</h3>
