Trying as an image because I can't get the banner to look right

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
 <div id='banner'>
 <img src='images/jon_headshot.jpg'></img>
-<pre>
+<img src='images/jhowell_banner.jpg'></img>
+<!--<pre>
 
      @@@   @@@@@@   @@@  @@@     @@@  @@@   @@@@@@   @@@  @@@  @@@  @@@@@@@@  @@@       @@@
      @@@  @@@@@@@@  @@@@ @@@     @@@  @@@  @@@@@@@@  @@@  @@@  @@@  @@@@@@@@  @@@       @@@
@@ -20,6 +21,7 @@
  : :::     : :  :   ::    :       :   : :   : :  :     :: :  : :    : :: ::   : :: : :  : :: : :
 
 </pre>
+-->
 <p>
 <h3><i>DevOps engineer and online operator extraordinaire.</i></h3>
 </p>
