--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <div id='banner'>
-<img src='images/jon_headshot.jpg'></img>
+	<!--<img src='images/jon_headshot.jpg'></img>-->
+<br>
 <img src='images/jhowell_banner.jpg'></img>
 <!--<pre>
 
