Add headshot and email address

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div id='banner'>
-	<!--<img src='images/jon_headshot.jpg'></img>-->
+<img src='images/jon_headshot.jpg'></img>
 <br>
 <img src='images/jhowell_banner.jpg'></img>
 <!--<pre>
@@ -25,6 +25,7 @@
 -->
 <p>
 <h3><i>DevOps engineer and online operator extraordinaire.</i></h3>
+rabbitdew@protonmail.com
 </p>
 </div>
 <h3>---Qualifications -----------------</h3>
@@ -47,7 +48,7 @@ Red Hat Certified Specialist in Ansible Automation
 • Load balancers: A10, F5, HAProxy
 <br>
 <br>
-• Log aggregation: Elasticsearch, Filebeat, Kibana
+• Log aggregation: Elasticsearch (ELK), Filebeat, Kibana
 <br>
 <br>
 • Monitoring: Grafana, Prometheus, Cacti, Zabbix
@@ -56,7 +57,7 @@ Red Hat Certified Specialist in Ansible Automation
 • Scripting: Bash, Python, Regex
 <br>
 <br>
-• Virtualization: Vsphere ESX, VirtualBox, KVM, Vagrant
+• Virtualization: VMware ESXi, KVM 
 <br>
 <br>
 </p>
@@ -96,6 +97,7 @@ learn.
 Migrate old services away from ancient VM clusters, SANs, network
 hardware and migrate configuration management to newer Puppet code.
 </p>
+<br>
 <div class="job_title">
 <b>Senior Linux Systems Engineer (Game Operations)</b>
 <br>
@@ -126,8 +128,7 @@ new games with Ansible, PXE, and Kickstart. Created Python bot in Slack to
 perform administrative tasks like updating game server builds, locking
 servers, and gathering some quick information. Automated server crash
 reporting and core dump uploads for game developers.
-<p>
-</p>
+<br>
 <div class="job_title">
 <b>Systems Engineer (Game Operations)</b>
 <br>
