Stripped metadata from images, added cupcake

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 <div id='banner'>
-<img id='headshot' src='images/jon_headshot.jpg'></img>
-<img id='namebanner' src='images/jhowell_banner.jpg'></img>
+<img id='jhowell_headshot' src='images/jhowell_headshot.jpg'></img>
+<img id='jhowell_banner' src='images/jhowell_banner.jpg'></img>
+<img id='jhowell_cupcake' src='images/jhowell_cake.jpg'></img>
 <!--<pre>
 
      @@@   @@@@@@   @@@  @@@     @@@  @@@   @@@@@@   @@@  @@@  @@@  @@@@@@@@  @@@       @@@
