Not just a cake but a cupcake

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div id='banner'>
 <img id='jhowell_headshot' src='images/jhowell_headshot.jpg'></img>
 <img id='jhowell_banner' src='images/jhowell_banner.jpg'></img>
-<img id='jhowell_cupcake' src='images/jhowell_cake.jpg'></img>
+<img id='jhowell_cupcake' src='images/jhowell_cupcake.jpg'></img>
 <!--<pre>
 
      @@@   @@@@@@   @@@  @@@     @@@  @@@   @@@@@@   @@@  @@@  @@@  @@@@@@@@  @@@       @@@
