--- a/index.html
+++ b/index.html
@@ -65,13 +65,10 @@ Red Hat Certified Specialist in Ansible Automation
 <p>• Created an automated process to reimage and provision servers between projects.
 <br>
 <br>
-• Moved stateful servers from a cloud-native Kubernetes application and deployed them to datacenter hardware. The datacenter hardware cost approximately 25% of the cloud hardware. Separately, the services left on the cloud were moved to pre-emptible instances resulting in a 70% reduction in cloud compute costs.
-<br>
-<br>
-• Created Python bot in chat to perform game server administrative tasks (EG: return metrics, lock servers, update builds).
-<br>
-<br>
-• Set up a variety of custom alerts, monitoring dashboards and log aggregation
+Moved stateful servers from a cloud-native Kubernetes application and deployed
+them to datacenter hardware. The datacenter hardware cost approximately 25% of 
+the cloud hardware. The services that remained on the cloud were moved to 
+pre-emptible instances resulting in a 70% reduction in cloud compute costs.
 <br>
 <h3>---Experience ---------------------</h3>
 <div class="job_title">
@@ -84,18 +81,17 @@ April 2019 – present
 </i>
 </div>
 <p>
-Work on a small team responsible for all of the Linux based servers in the
-company; including online game infrastructure, Arc client, online forums,
-internal tools, and server monitoring. Manage DNS, the CDN, and load
-balancers. Coordinate with game studios and internal departments to
-support projects with new technologies and hardware. Maintain legacy
-applications in a sparsely documented production environment. Triage,
-troubleshoot, and resolve issues across the full stack and document what we
+PWE is an online game publisher. I was hired to deploy and operate the server
+infrastructure for an upcoming release, then became the SME and primary liaison
+between PWE Network Operations and the development studio. My role at PWE grew
+into other projects until I was on a small team responsible for most of the 
+infrastructure in the company. 
+
+Manage DNS, the CDN, and load balancers. Coordinate with game studios and 
+internal departments to support projects with new technologies and hardware.
+Maintain legacy applications in a sparsely documented production environment.
+Triage, troubleshoot, and resolve issues across the full stack and document what we
 learn.
-</p>
-<p>
-Migrate old services away from ancient VM clusters, SANs, network
-hardware and migrate configuration management to newer Puppet code.
 </p>
 <br>
 <div class="job_title">
