Moved some things around and added a verification link for cert

--- a/index.html
+++ b/index.html
@@ -28,12 +28,6 @@
 rabbitdew@protonmail.com
 </p>
 </div>
-<h3>---Qualifications -----------------</h3>
-<p>
-Red Hat Certified Engineer #160-032-157
-<br>
-Red Hat Certified Specialist in Ansible Automation
-</p>
 <h3>---Familiar Tech ------------------</h3>
 <p>
 • Containerization: Docker, Google Kubernetes Engine
@@ -61,14 +55,13 @@ Red Hat Certified Specialist in Ansible Automation
 <br>
 <br>
 </p>
-<h3>---Notable Accomplishments -------</h3>
-<p>• Created an automated process to reimage and provision servers between projects.
 <br>
+<h3>---Qualifications -----------------</h3>
+<p>
+Red Hat Certified Engineer #160-032-157 <a href='https://rhtapps.redhat.com/verify?certId=160-032-157'>(Click here to verify)</a>
 <br>
-Moved stateful servers from a cloud-native Kubernetes application and deployed
-them to datacenter hardware. The datacenter hardware cost approximately 25% of 
-the cloud hardware. The services that remained on the cloud were moved to 
-pre-emptible instances resulting in a 70% reduction in cloud compute costs.
+Red Hat Certified Specialist in Ansible Automation
+</p>
 <br>
 <h3>---Experience ---------------------</h3>
 <div class="job_title">
@@ -86,12 +79,18 @@ infrastructure for an upcoming release, then became the SME and primary liaison
 between PWE Network Operations and the development studio. My role at PWE grew
 into other projects until I was on a small team responsible for most of the 
 infrastructure in the company. 
-
+<br>
 Manage DNS, the CDN, and load balancers. Coordinate with game studios and 
 internal departments to support projects with new technologies and hardware.
 Maintain legacy applications in a sparsely documented production environment.
 Triage, troubleshoot, and resolve issues across the full stack and document what we
 learn.
+<br>
+Moved stateful servers from a cloud-native Kubernetes application and deployed
+them to datacenter hardware. The datacenter hardware cost approximately 25% of 
+the cloud hardware. The services that remained on the cloud were moved to 
+pre-emptible instances resulting in a 70% reduction in cloud compute costs.
+<br>
 </p>
 <br>
 <div class="job_title">
@@ -113,17 +112,18 @@ Remotely absorbed the operations work of the studio Motiga as they were
 downsized and eventually closed. Solely responsible for supporting the live
 environment of Gigantic for most of its last year. Retired Gigantic gracefully
 on 2018_07_31, letting fans finish their last game.
+<br>
 Closed Runic studios and became responsible for the online multiplayer
-portion of Torchlight 2. Created the process to securely archive game source
+portion of Torchlight 2.
+<br>
+Created the process to securely archive game source
 code and assets from Git, Subversion, and Perforce and release it to 3rd
 parties (EG: Port games to other consoles).
+<br>
+Created Python bot in Slack to perform administrative tasks like updating 
+game server builds, locking servers, and gathering some quick information.
+Automated server crash reporting and core dump uploads for game developers.
 </p>
-<p>
-Created procedure to automate repurposing Dell and Huawei servers for
-new games with Ansible, PXE, and Kickstart. Created Python bot in Slack to
-perform administrative tasks like updating game server builds, locking
-servers, and gathering some quick information. Automated server crash
-reporting and core dump uploads for game developers.
 <br>
 <div class="job_title">
 <b>Systems Engineer (Game Operations)</b>
@@ -138,14 +138,17 @@ July 2016 – June 2017
 Hired to deploy and support the then upcoming title Gigantic by the Seattle
 based studio Motiga. The backend of Gigantic was a mix of Windows and
 Linux servers running a microservice architecture across bare metal,
-virtualized, and cloud hardware. Made a custom VM image of a game server
-on Google Cloud so we could quickly scale into the cloud if necessary. After
-population was lower than anticipated, I shrank the footprint of the game
-from ~150 servers to 15.
+virtualized, and cloud hardware. Created a process that allowed for 
+fast provisioning of cloud servers in case we ran out of datacenter capacity
+at launch. After population was lower than anticipated, I shrank the footprint
+of the game from ~150 servers to 15 to reduce operating cost.
 <br>
-Migrated and updated some custom internal services used by Cryptic
-studios including CMS used by Customer Service, application monitoring,
-and infrastructure to send in-game broadcasts.
+Created procedure to automate repurposing Dell and Huawei servers for
+new games with Ansible, PXE, and Kickstart. 
+<br>
+Migrated hosts to VMs on newer hardware including in-house built services 
+used by other departments and studios including CMS used by Customer Service,
+application monitoring, and infrastructure to send in-game broadcasts.
 </p>
 <br>
 <h3>---Education ----------------------</h3>
