Change some line breaks to ps because I like the margin formatting

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ rabbitdew@protonmail.com
 <h3>---Qualifications -----------------</h3>
 <p>
 Red Hat Certified Engineer #160-032-157 <a href='https://rhtapps.redhat.com/verify?certId=160-032-157'>(Click here to verify)</a>
-<br>
+</p>
+<p>
 Red Hat Certified Specialist in Ansible Automation
 </p>
-<br>
 <h3>---Experience ---------------------</h3>
 <div class="job_title">
 <b>Development Operations Engineer (Infrastructure)</b>
@@ -79,20 +79,20 @@ infrastructure for an upcoming release, then became the SME and primary liaison
 between PWE Network Operations and the development studio. My role at PWE grew
 into other projects until I was on a small team responsible for most of the 
 infrastructure in the company. 
-<br>
+</p>
+<p>
 Manage DNS, the CDN, and load balancers. Coordinate with game studios and 
 internal departments to support projects with new technologies and hardware.
 Maintain legacy applications in a sparsely documented production environment.
 Triage, troubleshoot, and resolve issues across the full stack and document what we
 learn.
-<br>
+</p>
+<p>
 Moved stateful servers from a cloud-native Kubernetes application and deployed
 them to datacenter hardware. The datacenter hardware cost approximately 25% of 
 the cloud hardware. The services that remained on the cloud were moved to 
 pre-emptible instances resulting in a 70% reduction in cloud compute costs.
-<br>
 </p>
-<br>
 <div class="job_title">
 <b>Senior Linux Systems Engineer (Game Operations)</b>
 <br>
@@ -112,14 +112,17 @@ Remotely absorbed the operations work of the studio Motiga as they were
 downsized and eventually closed. Solely responsible for supporting the live
 environment of Gigantic for most of its last year. Retired Gigantic gracefully
 on 2018_07_31, letting fans finish their last game.
-<br>
+</p>
+<p>
 Closed Runic studios and became responsible for the online multiplayer
 portion of Torchlight 2.
-<br>
+</p>
+<p>
 Created the process to securely archive game source
 code and assets from Git, Subversion, and Perforce and release it to 3rd
 parties (EG: Port games to other consoles).
-<br>
+</p>
+<p>
 Created Python bot in Slack to perform administrative tasks like updating 
 game server builds, locking servers, and gathering some quick information.
 Automated server crash reporting and core dump uploads for game developers.
@@ -142,10 +145,12 @@ virtualized, and cloud hardware. Created a process that allowed for
 fast provisioning of cloud servers in case we ran out of datacenter capacity
 at launch. After population was lower than anticipated, I shrank the footprint
 of the game from ~150 servers to 15 to reduce operating cost.
-<br>
+</p>
+<p>
 Created procedure to automate repurposing Dell and Huawei servers for
 new games with Ansible, PXE, and Kickstart. 
-<br>
+</p>
+<p>
 Migrated hosts to VMs on newer hardware including in-house built services 
 used by other departments and studios including CMS used by Customer Service,
 application monitoring, and infrastructure to send in-game broadcasts.
@@ -160,3 +165,4 @@ A.A Mathematics, Honors, 2013
 Laney College, Oakland, CA
 </p>
 </body>
+</html>
