Add links to github and linkedin

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
 </pre>
 -->
 <p>
-<h3><i>DevOps engineer and online operator extraordinaire.</i></h3>
+<h3><i>Online operator extraordinaire.</i></h3>
 rabbitdew@protonmail.com
+<br>
+<a href='https://github.com/rabbitdew'>My GitHub</a>
+<br>
+<a href='https://www.linkedin.com/in/jon-howell-41a7aa117/'>My LinkedIn</a>
 </p>
 </div>
 <br>
