Moving things around a little

--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 </pre>
 -->
 <p>
-<h3><i>Online operator extraordinaire.</i></h3>
-rabbitdew@protonmail.com
+<h3><i>Engineer and online operator extraordinaire.</i></h3>
 <br>
 <a href='https://github.com/rabbitdew'>My GitHub</a>
 <br>
 <a href='https://www.linkedin.com/in/jon-howell-41a7aa117/'>My LinkedIn</a>
+<br>
+rabbitdew@protonmail.com
 </p>
 </div>
 <br>
