--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ rabbitdew@protonmail.com
 • Log aggregation: Elasticsearch (ELK), Filebeat, Kibana
 <br>
 <br>
-• Monitoring: Grafana, Prometheus, Cacti, Zabbix
+• Monitoring: Grafana, Prometheus, Stackdriver, Zabbix
 <br>
 <br>
-• Scripting: Bash, Python, Regex
+• Scripting: Bash, Python
 <br>
 <br>
 • Virtualization: VMware ESXi, KVM 
@@ -95,9 +95,9 @@ Triage, troubleshoot, and resolve issues across the full stack and document what
 learn.
 </p>
 <p>
-Moved stateful servers from a cloud-native Kubernetes application and deployed
-them to datacenter hardware. The datacenter hardware cost approximately 25% of 
-the cloud hardware. The services that remained on the cloud were moved to 
+Moved a sole, stateful service from a cloud-native Kubernetes application to 
+datacenter hardware. The datacenter hardware cost approximately 25% of the 
+cloud hardware. The services that remained on the cloud were moved to 
 pre-emptible instances resulting in a 70% reduction in cloud compute costs.
 </p>
 <br>
