little editing. Added doom flame barrel gifs

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 <p>
 <h3><i>Engineer and online operator extraordinaire.</i></h3>
 <br>
-<a href='https://github.com/rabbitdew'>My GitHub</a>
+<a href='https://github.com/rabbitdew'>GitHub</a>
 <br>
-<a href='https://www.linkedin.com/in/jon-howell-41a7aa117/'>My LinkedIn</a>
+<a href='https://www.linkedin.com/in/jon-howell-41a7aa117/'>LinkedIn</a>
 <br>
-rabbitdew@protonmail.com
+<img src='images/doom_flame_barrel.gif'></img>rabbitdew@protonmail.com<img src='images/doom_flame_barrel.gif'></img>
 </p>
 </div>
 <br>
@@ -116,6 +116,10 @@ new titles. Configure monitoring and log aggregation software with custom
 metrics and alerts.
 </p>
 <p>
+Created Python bot in Slack to perform administrative tasks like updating 
+game server builds, locking servers, and gathering some quick information.
+</p>
+<p>
 Remotely absorbed the operations work of the studio Motiga as they were
 downsized and eventually closed. Solely responsible for supporting the live
 environment of Gigantic for most of its last year. Retired Gigantic gracefully
@@ -131,10 +135,6 @@ code and assets from Git, Subversion, and Perforce and release it to 3rd
 parties (EG: Port games to other consoles).
 </p>
 <p>
-Created Python bot in Slack to perform administrative tasks like updating 
-game server builds, locking servers, and gathering some quick information.
-</p>
-<p>
 Automated server crash reporting and core dump uploads for game developers.
 </p>
 <br>
@@ -148,17 +148,17 @@ July 2016 – June 2017
 </i>
 </div>
 <p>
+Created procedure to automate repurposing a variety of servers for
+new games with Ansible, PXE, and Kickstart. 
+</p>
+<p>
 Hired to deploy and support the then upcoming title Gigantic by the Seattle
-based studio Motiga. The backend of Gigantic was a mix of Windows and
+based studio Motiga. Gigantic infra was a mix of Windows and
 Linux servers running a microservice architecture across bare metal,
 virtualized, and cloud hardware. Created a process that allowed for 
 fast provisioning of cloud servers in case we ran out of datacenter capacity
 at launch. After population was lower than anticipated, I shrank the footprint
 of the game from ~150 servers to 15 to reduce operating cost.
-</p>
-<p>
-Created procedure to automate repurposing Dell and Huawei servers for
-new games with Ansible, PXE, and Kickstart. 
 </p>
 <p>
 Migrated hosts to VMs on newer hardware including in-house built services 
